# My-Data-Projects

./: README.md
Python/enterprise-data-cleansing-pipeline/: Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
Python/enterprise-data-cleansing-pipeline/config/: cleaning_rules.json  data_schema.json  logging_config.yaml
Python/enterprise-data-cleansing-pipeline/dashboard/: app.py
Python/enterprise-data-cleansing-pipeline/dashboard/assets/: style.css
Python/enterprise-data-cleansing-pipeline/data/input/: product_reference.json
Python/enterprise-data-cleansing-pipeline/docs/: API.md  BUSINESS_RULES.md
Python/enterprise-data-cleansing-pipeline/notebooks/: 01_exploratory_analysis.ipynb
Python/enterprise-data-cleansing-pipeline/scripts/: deploy.sh  run_pipeline.sh
Python/enterprise-data-cleansing-pipeline/src/: __init__.py
Python/enterprise-data-cleansing-pipeline/src/core/: __init__.py  extractor.py  loader.py  transformer.py
Python/enterprise-data-cleansing-pipeline/src/orchestration/: __init__.py  error_handler.py  pipeline_manager.py
Python/enterprise-data-cleansing-pipeline/src/utils/: __init__.py  config_loader.py  email_alerter.py  logger.py
Python/enterprise-data-cleansing-pipeline/src/validation/: __init__.py  anomaly_detector.py  quality_metrics.py  schema_validator.py
Python/enterprise-data-cleansing-pipeline/tests/: __init__.py
Python/enterprise-data-cleansing-pipeline/tests/fixtures/: sample_data.csv
Python/enterprise-data-cleansing-pipeline/tests/integration/: test_full_pipeline.py
(+378 files in other folders)
